[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ical_library"
authors = [{name = "Jorrick Sleijster", email = "jorricks3@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Communications",
    "Topic :: Communications :: Conferencing",
    "Topic :: Office/Business",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Internet",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",

]
dynamic = ["version", "description"]
requires-python = ">=3.8"
dependencies = [
    "pendulum>=2.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
test = [
    "pytest >=6.2.4,<7.0.0",
    "pytest-cov >=2.12.0,<4.0.0",
    "flake8 >=4.0.0,<5.0.0",
    "black >= 22.6.0,<23.0.0",
    "isort >=5.10.1,<6.0.0",
    "mypy ==0.910",
    "pytype >=2022.6.30",
]
doc = [
    "mkdocs >=1.3.0,<2.0.0",
    "mkdocs-material >=8.3.9,<9.0.0",
    "mkdocstrings[python] >=0.19.0,<1.0.0",
    "termynal >=0.2.0,<1.0.0",
]
dev = [
    "pre-commit >=2.19.0,<3.0.0",
]


[project.urls]
Home = "https://jorricks.github.io/iCal-library"
Documentation = "https://jorricks.github.io/iCal-library"
Source = "https://github.com/Jorricks/iCal-library"
PullRequests = "https://github.com/Jorricks/iCal-library/pulls"
Issues = "https://github.com/Jorricks/iCal-library/issues"

[tool.black]
line-length=120
target-version=['py38']

[tool.isort]
line_length = 120
multi_line_output = 3
force_alphabetical_sort_within_sections = "True"
force_sort_within_sections = "False"
known_icalreader = ["ical_library"]
sections=["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER", "ICALREADER"]
profile = "black"

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = "True"
scripts_are_modules = "True"
