[metadata]
name = ical-reader
version = attr: ical_reader.__version__
url = https://github.com/Jorricks/ical-reader
project_urls =
    Documentation = https://github.com/Jorricks/ical-reader
    Source Code = https://github.com/Jorricks/ical-reader
    Issue Tracker = https://github.com/Jorricks/ical-reader/issues/
license = MIT
license_files = LICENSE
author = Jorrick Sleijster
author_email = jorricks3@gmail.com
maintainer = Jorrick Sleijster
maintainer_email = jorricks3@gmail.com
description = Fast, yet simple, iCalendar reader with excellent recurrence support
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = >= 3.8

[options.packages.find]
where = src

[options.package_data]
* = py.typed

# Dependencies are in setup.py for GitHub's dependency graph.